seg2/w1/src/s3/etc_iptables_rules.v4
# Generated by iptables-save v1.6.0 on Thu Oct 11 10:17:13 2018
*filter
:INPUT DROP [57:15290]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [75:8092]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 -i !lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.1.1.0/24 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 172.16.1.0/24 -p icmp -m icmp --icmp-type any -j ACCEPT
-A INPUT -s 10.1.1.0/24 -p icmp -m icmp --icmp-type any -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.1.1.0/24 -d 172.16.1.10/32 -p tcp -m multiport --dports 22,25,80,110,5432 -j ACCEPT
-A FORWARD -s 10.1.1.0/24 -d 172.16.1.10/32 -p udp -m multiport --dports 53,123 -j ACCEPT
-A FORWARD -s 10.1.1.0/24 -d 172.16.1.20/32 -p tcp -m multiport --dports 21,80,443,3389 -j ACCEPT
-A FORWARD -s 10.1.1.0/24 -d 172.16.1.20/32 -p udp -m multiport --dports 123 -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -o enp0s3 -j ACCEPT
-A FORWARD -s 10.1.1.0/24 -o enp0s3 -j ACCEPT
-A FORWARD -d 172.16.1.10/32 -i enp0s3 -p tcp -m multiport --dports 25,80,110 -j ACCEPT
-A FORWARD -d 172.16.1.10/32 -i enp0s3 -p udp -m multiport --dports 53,123 -j ACCEPT
-A FORWARD -d 172.16.1.20/32 -i enp0s3 -p tcp -m multiport --dports 21,443,80 -j ACCEPT
-A FORWARD -d 172.16.1.20/32 -i enp0s3 -p udp -m multiport --dports 123 -j ACCEPT
COMMIT
# Completed on Thu Oct 11 10:17:13 2018
# Generated by iptables-save v1.6.0 on Thu Oct 11 10:17:13 2018
*nat
:PREROUTING ACCEPT [2:84]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i enp0s3 -p tcp -m multiport --dports 25,80,110 -j DNAT --to-destination 172.16.1.10
-A PREROUTING -i enp0s3 -p udp -m multiport --dports 53,123 -j DNAT --to-destination 172.16.1.10
-A PREROUTING -i enp0s3 -p tcp -m multiport --dports 21,443 -j DNAT --to-destination 172.16.1.20
-A PREROUTING -i enp0s3 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.16.1.20:80
-A PREROUTING -i enp0s3 -p udp -m udp --dport 8123 -j DNAT --to-destination 172.16.1.20:123
-A POSTROUTING -s 10.1.1.0/24 -o enp0s3 -j MASQUERADE
-A POSTROUTING -s 172.16.1.0/24 -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Thu Oct 11 10:17:13 2018
